different color added for every player

--- a/style.css
+++ b/style.css
@@ -25,3 +25,13 @@ body {
     cursor: pointer;
     outline: none;
  }
+ 
+button.square[data-pro="X"] {
+color: red;
+background-color: pink;
+}
+
+button.square[data-pro="O"] {
+  color: #fff;
+  background-color: darkblue;
+}
